start screen added with new image

--- a/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
+++ b/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
@@ -36,25 +36,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dogeB" translatesAutoresizingMaskIntoConstraints="NO" id="hFl-pi-6ra">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dogeStart" translatesAutoresizingMaskIntoConstraints="NO" id="hFl-pi-6ra">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogeSitter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoD-S8-3wV">
-                                <rect key="frame" x="20" y="69" width="374" height="67"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="45"/>
-                                <color key="textColor" red="0.42352941179999998" green="0.4431372549" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ao1-mI-oiI">
-                                <rect key="frame" x="168" y="144" width="79" height="52"/>
+                                <rect key="frame" x="168" y="268" width="79" height="52"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
                                 <state key="normal" title="Begin">
-                                    <color key="titleColor" red="0.82745098039999998" green="0.21176470589999999" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="CJ0-sf-sim" kind="presentation" modalTransitionStyle="flipHorizontal" id="ArH-fB-TUN"/>
+                                    <segue destination="CJ0-sf-sim" kind="presentation" modalTransitionStyle="crossDissolve" id="ArH-fB-TUN"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DogeSitter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoD-S8-3wV">
+                                <rect key="frame" x="20" y="187" width="374" height="67"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="45"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.011141231200000001" green="0.015776832189999999" blue="0.3234211387" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -62,7 +62,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bIV-lB-J35" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="398" y="302"/>
+            <point key="canvasLocation" x="388" y="302"/>
         </scene>
         <!--Dont Touch The Grumpy Cat View Controller-->
         <scene sceneID="dv8-Mn-a0N">
@@ -287,6 +287,6 @@
     <resources>
         <image name="Doge" width="104" height="184"/>
         <image name="GrumpyCat" width="104" height="184"/>
-        <image name="dogeB" width="414" height="675"/>
+        <image name="dogeStart" width="414" height="736"/>
     </resources>
 </document>
