--- a/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
+++ b/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ktO-IA-djn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -83,7 +83,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="ZOa-g7-JHK"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="NTJ-s2-ghL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Aj-CX-jjE">
@@ -100,7 +99,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="myI-rt-YYw"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="joJ-tF-mqe"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="14" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEd-0U-8pz">
@@ -109,7 +107,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="JZo-Re-1yl"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="sbw-54-o3Z"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LQa-2T-gO5">
@@ -117,7 +114,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="v3J-Ul-DD3"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="VJN-aq-sFC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cuh-fh-aBp">
@@ -133,7 +129,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="NOa-Op-Yb0"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="yRQ-3B-pVe"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2lJ-eb-zKB">
@@ -141,7 +136,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="MDF-Af-9od"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="NhA-lB-Gyb"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="9" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJY-yM-203">
@@ -150,7 +144,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="Dea-LL-Na8"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="Ic2-qS-Ykf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nry-S2-d3y">
@@ -167,7 +160,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="9jb-qs-whK"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="2hV-hB-tPY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="6" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRQ-df-CY8">
@@ -176,7 +168,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="eFz-bf-2vD"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="DRV-Jr-LZq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3z-6J-LdR">
@@ -193,7 +184,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="fWa-PR-X2y"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="DCg-ai-1Do"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFj-Zv-48D">
@@ -202,7 +192,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="NQ7-lZ-iiK"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="ZRd-od-e6I"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i73-Ja-wdh">
@@ -219,7 +208,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="a3x-Ae-x45"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="DpS-Ke-9QR"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKU-c3-gMj">
@@ -228,7 +216,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="uxF-k4-74Q"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="L7L-Tn-TtW"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="7" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uu7-hF-cGM">
@@ -237,7 +224,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="e3g-h1-epA"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="lS9-bT-3zP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="11" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ltB-2g-M0j">
@@ -246,7 +232,6 @@
                                 <state key="normal" image="GrumpyCat"/>
                                 <connections>
                                     <action selector="touchedAGrumpyCat:" destination="CJ0-sf-sim" eventType="touchUpInside" id="NKd-eD-neH"/>
-                                    <segue destination="JYv-SY-4Zg" kind="presentation" id="Q0u-bu-51N"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -326,7 +311,4 @@
         <image name="GrumpyCat" width="104" height="184"/>
         <image name="dogeStart" width="414" height="736"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="yRQ-3B-pVe"/>
-    </inferredMetricsTieBreakers>
 </document>
