--- a/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
+++ b/DogeSitter/DogeSitter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Pau-Ze-IQX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Pau-Ze-IQX">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -45,7 +45,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="388" y="-528"/>
+            <point key="canvasLocation" x="1462" y="302"/>
         </scene>
         <!--Start Screen View Controller-->
         <scene sceneID="W4s-Co-wbu">
@@ -73,7 +73,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="CJ0-sf-sim" kind="presentation" modalTransitionStyle="flipHorizontal" id="ev1-Pi-yJd"/>
+                                    <segue destination="BV1-FR-VrT" kind="presentation" id="455-5P-96g"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lwm-Ga-12h">
@@ -311,26 +311,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GVt-If-IXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="952" y="1176"/>
-        </scene>
-        <!--Dont Touch The Grumpy Cat View Controller-->
-        <scene sceneID="dv8-Mn-a0N">
-            <objects>
-                <viewController id="CJ0-sf-sim" customClass="DontTouchTheGrumpyCatViewController" customModule="DogeSitter" customModuleProvider="target" sceneMemberID="viewController">
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iWh-N4-G2m" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1511" y="302"/>
-        </scene>
-        <!--Game Over View Controller-->
-        <scene sceneID="YIh-2U-Ikh">
-            <objects>
-                <viewController id="JYv-SY-4Zg" customClass="GameOverViewController" customModule="DogeSitter" customModuleProvider="target" sceneMemberID="viewController">
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZuZ-bb-qnD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2055" y="302"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CiA-4e-LSn">
